# MedGuide-AI

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml  test_retrieval.py
backend/app/: main.py
backend/app/api/: routes.py  test_routes.py
backend/app/citation/: __init__.py  formatter.py  test_citation.py
backend/app/core/: __init__.py  config.py
backend/app/graph/: nodes.py  router.py  state.py  test_graph.py  test_router.py  workflow.py
backend/app/ingest/: chroma_store.py  chunker.py  cleaner.py  debug_ingestion.py  embedder.py  loader.py  metadata.py  process_pdfs.py  test_chroma.py
backend/app/llm/: __init__.py  generator.py  ollama_client.py  openrouter_client.py  prompt.py
backend/app/retrieval/: __init__.py  bm25_store.py  demo_hybrid.py  hybrid_retriever.py  metadata_registry.py  reranker.py  retriever.py  search.py  test_bm25_store.py  test_hybrid_retriever.py  test_reranker.py  test_retriever.py
backend/app/schemas/: retrieval.py
backend/app/verification/: __init__.py  prompt.py  verifier.py
backend/app/websearch/: __init__.py  prompt.py  search.py  tavily_client.py  test_tavily_client.py
backend/tests/: regression_results.json  regression_test.py  test_chat_route.py  test_llm_prompt.py  test_verification.py
data/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CitationCard.jsx  ClinicalAnswerCard.jsx  EmptyState.jsx  EvidenceCard.jsx  EvidenceChain.jsx  EvidencePanel.jsx  (+9 more)
(+10 files in other folders)
